Optimisation: Use drawfill for selection boxes
* Selection boxes now (by-default) draw using DirectDraw_Clear for each line. This as a whole is faster, but can potentially be slower if done with enough selected units (hundreds).
* Added option to change transparency for the Multi-Select box (Options > Graphics > Transparent Mult-Select) which will speed up rendering when tranparency is disabled (because we'll no longer need to lock the back surface, ever).

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -146,11 +146,10 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "&Graphics"
         BEGIN
-//#if 0  // not ready yet
+            MENUITEM "Transparent Multi-Select",IDM_TRANSPARENTMULTISELECT,CHECKED
             MENUITEM "Spotl&ight Effects",      IDM_LIGHTEFFECTS,CHECKED
             MENUITEM "&Wall Promeshes",         IDM_DETAILON,CHECKED
             MENUITEM "D&ynamic Promeshes",      IDM_DYNAMICPM
-//#endif
             MENUITEM "&Topdown Fog",            IDM_TOPDOWNFOG
             POPUP "Topdown LOD"
             BEGIN
