Implement: ToolTip module (90%)
* Implement all ToolTip functions except for ToolTip_Draw.
* Research existing tooltip fields and flags.
* Rename a handful of tooltip functions to better describe what they do.
* Fix faulty tooltip comparison checking address of text buffer instead of content to see if it should draw, this would effectively allow a tooltip to always draw, even without content.
* Add Options > Show ToolTips to enable or disable tooltips showing at all. Great for cleaning up the UI and removing obstructions while recording.

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -104,6 +104,7 @@ BEGIN
         END
         MENUITEM "Show &ObjInfo",               IDM_SHOWOBJINFO
         MENUITEM "Show &Panels",                IDM_RENDERPANELS,CHECKED
+        MENUITEM "Show Tooltips",               IDM_SHOWTOOLTIPS,CHECKED
         MENUITEM "&Tooltip Sound",              IDM_TOOLTIPSOUND,CHECKED
         MENUITEM SEPARATOR
         MENUITEM "Reload &Keybinds"             IDM_RELOAD_KEYBINDS
