Add shortcut to enter/exit laser tracker mode
* Added shortcut LaserTrackerUnit ([L]): Which enters or exits laser tracker mode for the primary unit.

--- a/data/Settings/Shortcuts.cfg
+++ b/data/Settings/Shortcuts.cfg
@@ -259,6 +259,8 @@ Lego* {
 		FollowUnit								KEY_LEFTSHIFT+KEY_FOUR
 		; Speed up first-person unit movement and turning (while held).
 		Cheat_FasterUnit						KEY_RIGHTSHIFT
+		; Enters or exits laser tracker mode for the selected unit (the red selection box).
+		LaserTrackerUnit						!KEY_LEFTCTRL+!KEY_LEFTSHIFT+KEY_L
 
 		; Deletes all selected units.
 		Edit_DestroyUnits						!KEY_RIGHTSHIFT+KEY_DELETE ;KEY_RIGHTCTRL+KEY_RIGHTSHIFT+KEY_D
