--- a/.github/workflows/build_artifacts.yml
+++ b/.github/workflows/build_artifacts.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - src/openlrr/**
       - resources/**
-    tags: v*
+    tags: 'v*'
+    branches: '**'
 
 jobs:
   Nightly_release_build:
