Implement #70: Experimental resource tumble feature
* This feature can be enabled under Debug > Experimental > Resource Tumble
* When active and a wall is dug (and the PTL defines crystal/ore generation after RockFallComplete), resources will instantly spawn and tumble out of the wall by utilizing nulls provided by the rockfall LWS.
* Added extra checks to prevent resource tumble from activating from other sources.
* Only Ore and Crystals can tumble now.
* Resources will avoid tumbling into Lava, Lakes, and Flood Water.

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -227,6 +227,7 @@ BEGIN
             MENUITEM "Clear",                   IDM_DDRAWCLEAR,CHECKED
 //#endif
             MENUITEM "Wobbly World",            IDM_WOBBLYWORLD
+            MENUITEM "Resource Tumble",         IDM_RESOURCETUMBLE
         END
 //#if 0  // not ready yet
         POPUP "&Info"
